Fix product hunt logo not centered (#298)
* Made changes to the top banner

* Enhancements: Fixed some small bugs

* Update NavHeader.jsx

* Linting: FIxed some linting issues

* Resolved issue

* Resolved issue

* Resolved conflict

* Resolved issue

---------

--- a/src/Assets/aurora/styles/aurora-socials-router.css
+++ b/src/Assets/aurora/styles/aurora-socials-router.css
@@ -24,6 +24,11 @@
     .contributors-generator.fixed-width .block {
         width: 216px;
     }
+    .social-link-content {
+        margin-left: auto;
+        margin-right: auto;
+        width: 251px;
+    }
 }
 
 @media only screen and (max-width: 735px) {
